2010-01-15  Nate Chapin  <japhet@chromium.org>

        Reviewed by Dimitri Glazkov.

        [V8] Generate more of the custom behaviors that the v8 bindings attach to v8 FunctionTemplates.

        * bindings/scripts/CodeGeneratorV8.pm:
        * bindings/v8/V8Binding.cpp:
        (WebCore::getToStringName):
        (WebCore::constructorToString):
        (WebCore::getToStringTemplate):
        * bindings/v8/V8Binding.h:
        * bindings/v8/V8DOMWindowShell.cpp:
        (WebCore::V8DOMWindowShell::createNewContext):
        * bindings/v8/V8DOMWrapper.cpp:
        (WebCore::V8DOMWrapper::getTemplate):

2010-01-15  Dimitri Glazkov  <dglazkov@chromium.org>

        No review, rolling out r53331.
        http://trac.webkit.org/changeset/53331
        https://bugs.webkit.org/show_bug.cgi?id=30055

        Broke fast/borders/svg-as-border-image-3.html. Don't give up,
        Oliver! You are really, really close.

        * rendering/RenderPath.cpp:
        (WebCore::RenderPath::paint):

2010-01-15  Oliver Hunt  <oliver@apple.com>

        Reviewed by Nikolas Zimmermann.

        Bad DOM performance in large SVG files
        https://bugs.webkit.org/show_bug.cgi?id=30055

        Add an early return when we go to paint a RenderPath that
        isn't in the current clip.

        * rendering/RenderPath.cpp:
        (WebCore::RenderPath::paint):

2010-01-15  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        Reviewed by Antti Koivisto.

        Use OS(MAC_OS_X) instead of PLATFORM(MAC) when determining navigator.platform

        https://bugs.webkit.org/show_bug.cgi?id=33711

        * page/NavigatorBase.cpp:

2010-01-14  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Xan Lopez.

        [Gtk] Compiler warning: comparisons like 'X<=Y<=Z' do not have their mathematical meaning
        https://bugs.webkit.org/show_bug.cgi?id=33575

        Patch from Magnus Boman <captain.magnus@gmail.com>

        * platform/graphics/gtk/MediaPlayerPrivateGStreamer.cpp: