@@ -1,3 +1,13 @@
+2010-01-15  Alexander Pavlov  <apavlov@chromium.org>
+
+        Reviewed by Pavel Feldman.
+
+        Set pointer cursor when over a breakpoint in the BreakpointsSidebarPane
+
+        https://bugs.webkit.org/show_bug.cgi?id=33713
+
+        * inspector/front-end/inspector.css:
+
 2010-01-15  Nate Chapin  <japhet@chromium.org>
 
         Reviewed by Dimitri Glazkov.
